parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    CASE
    END
    OR
    SWITCH

Grammar

Rule 0     S' -> programa
Rule 1     programa -> MAIN LBRACE listaDeclaracion RBRACE
Rule 2     listaDeclaracion -> listaDeclaracion declaracion
Rule 3     listaDeclaracion -> declaracion
Rule 4     declaracion -> declaracionVariable
Rule 5     declaracion -> listaSentencias
Rule 6     declaracionVariable -> tipo listaIdentificadores SEMICOLON
Rule 7     listaIdentificadores -> ID
Rule 8     listaIdentificadores -> ID COMMA listaIdentificadores
Rule 9     tipo -> INT
Rule 10    tipo -> DOUBLE
Rule 11    listaSentencias -> listaSentencias sentencia
Rule 12    listaSentencias -> sentencia
Rule 13    listaSentencias -> empty
Rule 14    sentencia -> seleccion
Rule 15    sentencia -> iteracion
Rule 16    sentencia -> repeticion
Rule 17    sentencia -> sentIn
Rule 18    sentencia -> sentOut
Rule 19    sentencia -> asignacion
Rule 20    sentencia -> incremento
Rule 21    asignacion -> ID EQUAL sentExpresion SEMICOLON
Rule 22    incremento -> ID PLUSPLUS SEMICOLON
Rule 23    incremento -> ID MINUSMINUS SEMICOLON
Rule 24    incremento -> PLUSPLUS ID SEMICOLON
Rule 25    incremento -> MINUSMINUS ID SEMICOLON
Rule 26    sentExpresion -> expresion
Rule 27    sentExpresion -> incremento
Rule 28    sentExpresion -> SEMICOLON
Rule 29    seleccion -> IF expresion LBRACE listaSentencias RBRACE
Rule 30    seleccion -> IF expresion LBRACE listaSentencias RBRACE ELSE LBRACE listaSentencias RBRACE
Rule 31    iteracion -> WHILE expresion LBRACE listaSentencias RBRACE
Rule 32    repeticion -> DO LBRACE listaSentencias RBRACE WHILE expresion
Rule 33    sentIn -> CIN ID SEMICOLON
Rule 34    sentOut -> COUT expresion SEMICOLON
Rule 35    expresion -> expresionSimple relacionOp expresionSimple
Rule 36    expresion -> expresionSimple
Rule 37    relacionOp -> LESS
Rule 38    relacionOp -> LESSEQUAL
Rule 39    relacionOp -> GREATER
Rule 40    relacionOp -> GREATEREQUAL
Rule 41    relacionOp -> DEQUAL
Rule 42    relacionOp -> NEQUAL
Rule 43    expresionSimple -> expresionSimple sumaOp termino
Rule 44    expresionSimple -> termino
Rule 45    sumaOp -> PLUS
Rule 46    sumaOp -> MINUS
Rule 47    termino -> termino multOp factor
Rule 48    termino -> factor
Rule 49    multOp -> TIMES
Rule 50    multOp -> DIVIDE
Rule 51    multOp -> MOD
Rule 52    factor -> factor potOp componente
Rule 53    factor -> componente
Rule 54    potOp -> POWER
Rule 55    componente -> LPAREN expresion RPAREN
Rule 56    componente -> NUMBER
Rule 57    componente -> ID
Rule 58    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
CASE                 : 
CIN                  : 33
COMMA                : 8
COUT                 : 34
DEQUAL               : 41
DIVIDE               : 50
DO                   : 32
DOUBLE               : 10
ELSE                 : 30
END                  : 
EQUAL                : 21
GREATER              : 39
GREATEREQUAL         : 40
ID                   : 7 8 21 22 23 24 25 33 57
IF                   : 29 30
INT                  : 9
LBRACE               : 1 29 30 30 31 32
LESS                 : 37
LESSEQUAL            : 38
LPAREN               : 55
MAIN                 : 1
MINUS                : 46
MINUSMINUS           : 23 25
MOD                  : 51
NEQUAL               : 42
NUMBER               : 56
OR                   : 
PLUS                 : 45
PLUSPLUS             : 22 24
POWER                : 54
RBRACE               : 1 29 30 30 31 32
RPAREN               : 55
SEMICOLON            : 6 21 22 23 24 25 28 33 34
SWITCH               : 
TIMES                : 49
WHILE                : 31 32
error                : 

Nonterminals, with rules where they appear

asignacion           : 19
componente           : 52 53
declaracion          : 2 3
declaracionVariable  : 4
empty                : 13
expresion            : 26 29 30 31 32 34 55
expresionSimple      : 35 35 36 43
factor               : 47 48 52
incremento           : 20 27
iteracion            : 15
listaDeclaracion     : 1 2
listaIdentificadores : 6 8
listaSentencias      : 5 11 29 30 30 31 32
multOp               : 47
potOp                : 52
programa             : 0
relacionOp           : 35
repeticion           : 16
seleccion            : 14
sentExpresion        : 21
sentIn               : 17
sentOut              : 18
sentencia            : 11 12
sumaOp               : 43
termino              : 43 44 47
tipo                 : 6

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . MAIN LBRACE listaDeclaracion RBRACE

    MAIN            shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> MAIN . LBRACE listaDeclaracion RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) programa -> MAIN LBRACE . listaDeclaracion RBRACE
    (2) listaDeclaracion -> . listaDeclaracion declaracion
    (3) listaDeclaracion -> . declaracion
    (4) declaracion -> . declaracionVariable
    (5) declaracion -> . listaSentencias
    (6) declaracionVariable -> . tipo listaIdentificadores SEMICOLON
    (11) listaSentencias -> . listaSentencias sentencia
    (12) listaSentencias -> . sentencia
    (13) listaSentencias -> . empty
    (9) tipo -> . INT
    (10) tipo -> . DOUBLE
    (14) sentencia -> . seleccion
    (15) sentencia -> . iteracion
    (16) sentencia -> . repeticion
    (17) sentencia -> . sentIn
    (18) sentencia -> . sentOut
    (19) sentencia -> . asignacion
    (20) sentencia -> . incremento
    (58) empty -> .
    (29) seleccion -> . IF expresion LBRACE listaSentencias RBRACE
    (30) seleccion -> . IF expresion LBRACE listaSentencias RBRACE ELSE LBRACE listaSentencias RBRACE
    (31) iteracion -> . WHILE expresion LBRACE listaSentencias RBRACE
    (32) repeticion -> . DO LBRACE listaSentencias RBRACE WHILE expresion
    (33) sentIn -> . CIN ID SEMICOLON
    (34) sentOut -> . COUT expresion SEMICOLON
    (21) asignacion -> . ID EQUAL sentExpresion SEMICOLON
    (22) incremento -> . ID PLUSPLUS SEMICOLON
    (23) incremento -> . ID MINUSMINUS SEMICOLON
    (24) incremento -> . PLUSPLUS ID SEMICOLON
    (25) incremento -> . MINUSMINUS ID SEMICOLON

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for CIN resolved as shift
  ! shift/reduce conflict for COUT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PLUSPLUS resolved as shift
  ! shift/reduce conflict for MINUSMINUS resolved as shift
    INT             shift and go to state 11
    DOUBLE          shift and go to state 12
    RBRACE          reduce using rule 58 (empty -> .)
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    DO              shift and go to state 22
    CIN             shift and go to state 23
    COUT            shift and go to state 25
    ID              shift and go to state 24
    PLUSPLUS        shift and go to state 26
    MINUSMINUS      shift and go to state 27

  ! IF              [ reduce using rule 58 (empty -> .) ]
  ! WHILE           [ reduce using rule 58 (empty -> .) ]
  ! DO              [ reduce using rule 58 (empty -> .) ]
  ! CIN             [ reduce using rule 58 (empty -> .) ]
  ! COUT            [ reduce using rule 58 (empty -> .) ]
  ! ID              [ reduce using rule 58 (empty -> .) ]
  ! PLUSPLUS        [ reduce using rule 58 (empty -> .) ]
  ! MINUSMINUS      [ reduce using rule 58 (empty -> .) ]
  ! INT             [ reduce using rule 58 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 58 (empty -> .) ]

    listaDeclaracion               shift and go to state 4
    declaracion                    shift and go to state 5
    declaracionVariable            shift and go to state 6
    listaSentencias                shift and go to state 7
    tipo                           shift and go to state 8
    sentencia                      shift and go to state 9
    empty                          shift and go to state 10
    seleccion                      shift and go to state 13
    iteracion                      shift and go to state 14
    repeticion                     shift and go to state 15
    sentIn                         shift and go to state 16
    sentOut                        shift and go to state 17
    asignacion                     shift and go to state 18
    incremento                     shift and go to state 19

state 4

    (1) programa -> MAIN LBRACE listaDeclaracion . RBRACE
    (2) listaDeclaracion -> listaDeclaracion . declaracion
    (4) declaracion -> . declaracionVariable
    (5) declaracion -> . listaSentencias
    (6) declaracionVariable -> . tipo listaIdentificadores SEMICOLON
    (11) listaSentencias -> . listaSentencias sentencia
    (12) listaSentencias -> . sentencia
    (13) listaSentencias -> . empty
    (9) tipo -> . INT
    (10) tipo -> . DOUBLE
    (14) sentencia -> . seleccion
    (15) sentencia -> . iteracion
    (16) sentencia -> . repeticion
    (17) sentencia -> . sentIn
    (18) sentencia -> . sentOut
    (19) sentencia -> . asignacion
    (20) sentencia -> . incremento
    (58) empty -> .
    (29) seleccion -> . IF expresion LBRACE listaSentencias RBRACE
    (30) seleccion -> . IF expresion LBRACE listaSentencias RBRACE ELSE LBRACE listaSentencias RBRACE
    (31) iteracion -> . WHILE expresion LBRACE listaSentencias RBRACE
    (32) repeticion -> . DO LBRACE listaSentencias RBRACE WHILE expresion
    (33) sentIn -> . CIN ID SEMICOLON
    (34) sentOut -> . COUT expresion SEMICOLON
    (21) asignacion -> . ID EQUAL sentExpresion SEMICOLON
    (22) incremento -> . ID PLUSPLUS SEMICOLON
    (23) incremento -> . ID MINUSMINUS SEMICOLON
    (24) incremento -> . PLUSPLUS ID SEMICOLON
    (25) incremento -> . MINUSMINUS ID SEMICOLON

  ! shift/reduce conflict for RBRACE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for CIN resolved as shift
  ! shift/reduce conflict for COUT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PLUSPLUS resolved as shift
  ! shift/reduce conflict for MINUSMINUS resolved as shift
    RBRACE          shift and go to state 28
    INT             shift and go to state 11
    DOUBLE          shift and go to state 12
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    DO              shift and go to state 22
    CIN             shift and go to state 23
    COUT            shift and go to state 25
    ID              shift and go to state 24
    PLUSPLUS        shift and go to state 26
    MINUSMINUS      shift and go to state 27

  ! IF              [ reduce using rule 58 (empty -> .) ]
  ! WHILE           [ reduce using rule 58 (empty -> .) ]
  ! DO              [ reduce using rule 58 (empty -> .) ]
  ! CIN             [ reduce using rule 58 (empty -> .) ]
  ! COUT            [ reduce using rule 58 (empty -> .) ]
  ! ID              [ reduce using rule 58 (empty -> .) ]
  ! PLUSPLUS        [ reduce using rule 58 (empty -> .) ]
  ! MINUSMINUS      [ reduce using rule 58 (empty -> .) ]
  ! RBRACE          [ reduce using rule 58 (empty -> .) ]
  ! INT             [ reduce using rule 58 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 58 (empty -> .) ]

    declaracion                    shift and go to state 29
    declaracionVariable            shift and go to state 6
    listaSentencias                shift and go to state 7
    tipo                           shift and go to state 8
    sentencia                      shift and go to state 9
    empty                          shift and go to state 10
    seleccion                      shift and go to state 13
    iteracion                      shift and go to state 14
    repeticion                     shift and go to state 15
    sentIn                         shift and go to state 16
    sentOut                        shift and go to state 17
    asignacion                     shift and go to state 18
    incremento                     shift and go to state 19

state 5

    (3) listaDeclaracion -> declaracion .

    RBRACE          reduce using rule 3 (listaDeclaracion -> declaracion .)
    INT             reduce using rule 3 (listaDeclaracion -> declaracion .)
    DOUBLE          reduce using rule 3 (listaDeclaracion -> declaracion .)
    IF              reduce using rule 3 (listaDeclaracion -> declaracion .)
    WHILE           reduce using rule 3 (listaDeclaracion -> declaracion .)
    DO              reduce using rule 3 (listaDeclaracion -> declaracion .)
    CIN             reduce using rule 3 (listaDeclaracion -> declaracion .)
    COUT            reduce using rule 3 (listaDeclaracion -> declaracion .)
    ID              reduce using rule 3 (listaDeclaracion -> declaracion .)
    PLUSPLUS        reduce using rule 3 (listaDeclaracion -> declaracion .)
    MINUSMINUS      reduce using rule 3 (listaDeclaracion -> declaracion .)


state 6

    (4) declaracion -> declaracionVariable .

    RBRACE          reduce using rule 4 (declaracion -> declaracionVariable .)
    INT             reduce using rule 4 (declaracion -> declaracionVariable .)
    DOUBLE          reduce using rule 4 (declaracion -> declaracionVariable .)
    IF              reduce using rule 4 (declaracion -> declaracionVariable .)
    WHILE           reduce using rule 4 (declaracion -> declaracionVariable .)
    DO              reduce using rule 4 (declaracion -> declaracionVariable .)
    CIN             reduce using rule 4 (declaracion -> declaracionVariable .)
    COUT            reduce using rule 4 (declaracion -> declaracionVariable .)
    ID              reduce using rule 4 (declaracion -> declaracionVariable .)
    PLUSPLUS        reduce using rule 4 (declaracion -> declaracionVariable .)
    MINUSMINUS      reduce using rule 4 (declaracion -> declaracionVariable .)


state 7

    (5) declaracion -> listaSentencias .
    (11) listaSentencias -> listaSentencias . sentencia
    (14) sentencia -> . seleccion
    (15) sentencia -> . iteracion
    (16) sentencia -> . repeticion
    (17) sentencia -> . sentIn
    (18) sentencia -> . sentOut
    (19) sentencia -> . asignacion
    (20) sentencia -> . incremento
    (29) seleccion -> . IF expresion LBRACE listaSentencias RBRACE
    (30) seleccion -> . IF expresion LBRACE listaSentencias RBRACE ELSE LBRACE listaSentencias RBRACE
    (31) iteracion -> . WHILE expresion LBRACE listaSentencias RBRACE
    (32) repeticion -> . DO LBRACE listaSentencias RBRACE WHILE expresion
    (33) sentIn -> . CIN ID SEMICOLON
    (34) sentOut -> . COUT expresion SEMICOLON
    (21) asignacion -> . ID EQUAL sentExpresion SEMICOLON
    (22) incremento -> . ID PLUSPLUS SEMICOLON
    (23) incremento -> . ID MINUSMINUS SEMICOLON
    (24) incremento -> . PLUSPLUS ID SEMICOLON
    (25) incremento -> . MINUSMINUS ID SEMICOLON

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for CIN resolved as shift
  ! shift/reduce conflict for COUT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PLUSPLUS resolved as shift
  ! shift/reduce conflict for MINUSMINUS resolved as shift
    RBRACE          reduce using rule 5 (declaracion -> listaSentencias .)
    INT             reduce using rule 5 (declaracion -> listaSentencias .)
    DOUBLE          reduce using rule 5 (declaracion -> listaSentencias .)
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    DO              shift and go to state 22
    CIN             shift and go to state 23
    COUT            shift and go to state 25
    ID              shift and go to state 24
    PLUSPLUS        shift and go to state 26
    MINUSMINUS      shift and go to state 27

  ! IF              [ reduce using rule 5 (declaracion -> listaSentencias .) ]
  ! WHILE           [ reduce using rule 5 (declaracion -> listaSentencias .) ]
  ! DO              [ reduce using rule 5 (declaracion -> listaSentencias .) ]
  ! CIN             [ reduce using rule 5 (declaracion -> listaSentencias .) ]
  ! COUT            [ reduce using rule 5 (declaracion -> listaSentencias .) ]
  ! ID              [ reduce using rule 5 (declaracion -> listaSentencias .) ]
  ! PLUSPLUS        [ reduce using rule 5 (declaracion -> listaSentencias .) ]
  ! MINUSMINUS      [ reduce using rule 5 (declaracion -> listaSentencias .) ]

    sentencia                      shift and go to state 30
    seleccion                      shift and go to state 13
    iteracion                      shift and go to state 14
    repeticion                     shift and go to state 15
    sentIn                         shift and go to state 16
    sentOut                        shift and go to state 17
    asignacion                     shift and go to state 18
    incremento                     shift and go to state 19

state 8

    (6) declaracionVariable -> tipo . listaIdentificadores SEMICOLON
    (7) listaIdentificadores -> . ID
    (8) listaIdentificadores -> . ID COMMA listaIdentificadores

    ID              shift and go to state 32

    listaIdentificadores           shift and go to state 31

state 9

    (12) listaSentencias -> sentencia .

    IF              reduce using rule 12 (listaSentencias -> sentencia .)
    WHILE           reduce using rule 12 (listaSentencias -> sentencia .)
    DO              reduce using rule 12 (listaSentencias -> sentencia .)
    CIN             reduce using rule 12 (listaSentencias -> sentencia .)
    COUT            reduce using rule 12 (listaSentencias -> sentencia .)
    ID              reduce using rule 12 (listaSentencias -> sentencia .)
    PLUSPLUS        reduce using rule 12 (listaSentencias -> sentencia .)
    MINUSMINUS      reduce using rule 12 (listaSentencias -> sentencia .)
    RBRACE          reduce using rule 12 (listaSentencias -> sentencia .)
    INT             reduce using rule 12 (listaSentencias -> sentencia .)
    DOUBLE          reduce using rule 12 (listaSentencias -> sentencia .)


state 10

    (13) listaSentencias -> empty .

    IF              reduce using rule 13 (listaSentencias -> empty .)
    WHILE           reduce using rule 13 (listaSentencias -> empty .)
    DO              reduce using rule 13 (listaSentencias -> empty .)
    CIN             reduce using rule 13 (listaSentencias -> empty .)
    COUT            reduce using rule 13 (listaSentencias -> empty .)
    ID              reduce using rule 13 (listaSentencias -> empty .)
    PLUSPLUS        reduce using rule 13 (listaSentencias -> empty .)
    MINUSMINUS      reduce using rule 13 (listaSentencias -> empty .)
    RBRACE          reduce using rule 13 (listaSentencias -> empty .)
    INT             reduce using rule 13 (listaSentencias -> empty .)
    DOUBLE          reduce using rule 13 (listaSentencias -> empty .)


state 11

    (9) tipo -> INT .

    ID              reduce using rule 9 (tipo -> INT .)


state 12

    (10) tipo -> DOUBLE .

    ID              reduce using rule 10 (tipo -> DOUBLE .)


state 13

    (14) sentencia -> seleccion .

    IF              reduce using rule 14 (sentencia -> seleccion .)
    WHILE           reduce using rule 14 (sentencia -> seleccion .)
    DO              reduce using rule 14 (sentencia -> seleccion .)
    CIN             reduce using rule 14 (sentencia -> seleccion .)
    COUT            reduce using rule 14 (sentencia -> seleccion .)
    ID              reduce using rule 14 (sentencia -> seleccion .)
    PLUSPLUS        reduce using rule 14 (sentencia -> seleccion .)
    MINUSMINUS      reduce using rule 14 (sentencia -> seleccion .)
    RBRACE          reduce using rule 14 (sentencia -> seleccion .)
    INT             reduce using rule 14 (sentencia -> seleccion .)
    DOUBLE          reduce using rule 14 (sentencia -> seleccion .)


state 14

    (15) sentencia -> iteracion .

    IF              reduce using rule 15 (sentencia -> iteracion .)
    WHILE           reduce using rule 15 (sentencia -> iteracion .)
    DO              reduce using rule 15 (sentencia -> iteracion .)
    CIN             reduce using rule 15 (sentencia -> iteracion .)
    COUT            reduce using rule 15 (sentencia -> iteracion .)
    ID              reduce using rule 15 (sentencia -> iteracion .)
    PLUSPLUS        reduce using rule 15 (sentencia -> iteracion .)
    MINUSMINUS      reduce using rule 15 (sentencia -> iteracion .)
    RBRACE          reduce using rule 15 (sentencia -> iteracion .)
    INT             reduce using rule 15 (sentencia -> iteracion .)
    DOUBLE          reduce using rule 15 (sentencia -> iteracion .)


state 15

    (16) sentencia -> repeticion .

    IF              reduce using rule 16 (sentencia -> repeticion .)
    WHILE           reduce using rule 16 (sentencia -> repeticion .)
    DO              reduce using rule 16 (sentencia -> repeticion .)
    CIN             reduce using rule 16 (sentencia -> repeticion .)
    COUT            reduce using rule 16 (sentencia -> repeticion .)
    ID              reduce using rule 16 (sentencia -> repeticion .)
    PLUSPLUS        reduce using rule 16 (sentencia -> repeticion .)
    MINUSMINUS      reduce using rule 16 (sentencia -> repeticion .)
    RBRACE          reduce using rule 16 (sentencia -> repeticion .)
    INT             reduce using rule 16 (sentencia -> repeticion .)
    DOUBLE          reduce using rule 16 (sentencia -> repeticion .)


state 16

    (17) sentencia -> sentIn .

    IF              reduce using rule 17 (sentencia -> sentIn .)
    WHILE           reduce using rule 17 (sentencia -> sentIn .)
    DO              reduce using rule 17 (sentencia -> sentIn .)
    CIN             reduce using rule 17 (sentencia -> sentIn .)
    COUT            reduce using rule 17 (sentencia -> sentIn .)
    ID              reduce using rule 17 (sentencia -> sentIn .)
    PLUSPLUS        reduce using rule 17 (sentencia -> sentIn .)
    MINUSMINUS      reduce using rule 17 (sentencia -> sentIn .)
    RBRACE          reduce using rule 17 (sentencia -> sentIn .)
    INT             reduce using rule 17 (sentencia -> sentIn .)
    DOUBLE          reduce using rule 17 (sentencia -> sentIn .)


state 17

    (18) sentencia -> sentOut .

    IF              reduce using rule 18 (sentencia -> sentOut .)
    WHILE           reduce using rule 18 (sentencia -> sentOut .)
    DO              reduce using rule 18 (sentencia -> sentOut .)
    CIN             reduce using rule 18 (sentencia -> sentOut .)
    COUT            reduce using rule 18 (sentencia -> sentOut .)
    ID              reduce using rule 18 (sentencia -> sentOut .)
    PLUSPLUS        reduce using rule 18 (sentencia -> sentOut .)
    MINUSMINUS      reduce using rule 18 (sentencia -> sentOut .)
    RBRACE          reduce using rule 18 (sentencia -> sentOut .)
    INT             reduce using rule 18 (sentencia -> sentOut .)
    DOUBLE          reduce using rule 18 (sentencia -> sentOut .)


state 18

    (19) sentencia -> asignacion .
